--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,6 +1,16 @@
+<!-- 
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+        
+</FrameLayout>
+-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,15 +20,17 @@
     tools:context=".MainActivity" >
 
     <fragment android:name="com.example.btconsole.ProwlDeviceFragment"
-        android:id="@+id/list"
+        android:id="@+id/fragment_container"
         android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"/>
-    
+        android:layout_height="0dp"
+        android:layout_width="match_parent"/>
+
     <Button android:id="@+id/new_connection" 
         android:text="@string/new_connection" 
+        android:layout_weight="0"
 	    android:layout_width="match_parent"
-    	android:layout_height="match_parent"
+    	android:layout_height="wrap_content"
     	android:onClick="addConnection"/>	
 
 </LinearLayout>
+
