--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <fragment android:name="com.example.btconsole.ProwlDeviceFragment"
-        android:id="@+id/fragment_container"
+    <FrameLayout 
+	    android:id="@+id/fragment_container"
         android:layout_weight="1"
         android:layout_height="0dp"
         android:layout_width="match_parent"/>
