--- a/res/layout/activity_control.xml
+++ b/res/layout/activity_control.xml
@@ -12,9 +12,8 @@
     tools:context=".MainActivity" >
  
  	<fragment android:name="com.example.btconsole.ControlFragment"
-            android:id="@+id/list"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+            android:id="@+id/controlfragment"
+            android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
 </LinearLayout>
