--- a/res/layout/fragment_control.xml
+++ b/res/layout/fragment_control.xml
@@ -75,16 +75,21 @@
     <ScrollView
         android:id="@+id/ScrollView01"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:background="@drawable/back"
+        android:paddingBottom="@dimen/small_vertical_margin"
+        android:paddingLeft="@dimen/small_horizontal_margin"
+        android:paddingRight="@dimen/small_horizontal_margin"
+        android:paddingTop="@dimen/small_vertical_margin" >
 
         <TextView
             android:id="@+id/logView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="bottom"
             android:maxLines="100"
             android:textIsSelectable="true"
-            android:typeface="monospace"
-            android:gravity="bottom" />
+            android:typeface="monospace" />
     </ScrollView>
 
 </LinearLayout>
