--- a/res/layout/activity_control.xml
+++ b/res/layout/activity_control.xml
@@ -1,20 +1,12 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_layout"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:baselineAligned="false"
-    android:orientation="horizontal"
+    android:id="@+id/controlfragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
- 
- 	<fragment android:name="com.example.btconsole.ControlFragment"
-            android:id="@+id/controlfragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+    tools:context=".ControlActivity" >
 
-</LinearLayout>
-
+</FrameLayout>
