--- a/res/layout/fragment_control.xml
+++ b/res/layout/fragment_control.xml
@@ -51,7 +51,7 @@
 
     <LinearLayout
         android:id="@+id/control_layout3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
@@ -69,6 +69,8 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/tcpip_unconnected_string"
+            android:gravity="center"
             android:textIsSelectable="true" />
     </LinearLayout>
 
